finalise base.py and using run.py to plot

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     //"python.defaultInterpreterPath": "C:\\Users\\linus\\AppData\\Local\\Microsoft\\WindowsApps\\python3.10.exe",
-    "python.autoComplete.extraPaths": ["./base.py"],
+    "python.autoComplete.extraPaths": [".base.py"],
     "window.zoomLevel": 1,
     "security.workspace.trust.untrustedFiles": "open",
     "terminal.integrated.enableMultiLinePasteWarning": false,
